# trburcor

./: Cargo.toml  README.md  build.rs  main.rs  smooth.c
src/: lib.rs  main.rs  png_gen.py  pynorms.py  smooth.c  smooth.rs
src/lib/src/: time_code.rs
txt_to_parse/: TransferBurgerMccornack_iconditions0.txt  TransferBurgerMccornack_iconditions00.txt  TransferBurgerMccornack_iconditions000.txt  TransferBurgerMccornack_iconditions1.txt  TransferBurgerMccornack_iconditions11.txt  TransferBurgerMccornack_iconditions111.txt  TransferBurgerMccornack_iconditions2.txt  TransferBurgerMccornack_iconditions22.txt  TransferBurgerMccornack_iconditions222.txt  TransferBurgerMccornack_iconditions3.txt  TransferBurgerMccornack_iconditions33.txt  TransferBurgerMccornack_iconditions4.txt  TransferBurgerMccornack_iconditions44.txt
