[package]
name = "RUSTDraft"
version = "0.1.0"
authors = ["Maximka-hue <53125181+Maximka-hue@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="^2.33.0"
cc = "*"
libc = "*"
structopt = "*"