[package]
name = "Transfer_equation_with_correction_of_second_order"
version = "0.1.0"
authors = ["Maximka-hue <53125181+Maximka-hue@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "lib"
crate-type = ["cdylib"]

#[dependencies.pyo3]
#version = "0.13.2"
#features = ["auto-initialize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

#[dependencies.cpython]
#version = "^0.6"
#default-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#ordered_float="^2.0"
[dependencies]
#serde= "*"
nom-methods= "*"
crossbeam = "^0.8.0"
num_cpus= "*"
#Some benefits to structures
derive_builder = "^0.10.1"
structopt = "*"
#ordermap = "^0.4.2"
#tuple = "0.5.1"
#itertools = "*"
#once_cell = "*"
num = "*"
num-traits = "0.2.14"
#timing
time = "^0.2.25"
chrono = "^0.4"
#colorize
tutil = "^0.2"
ansi_term = "0.12"
#parsing
#arg_input = "^2.0"
clap ="^2.33.0"
io = "*"
regex= "*"
lazy_static= "*"
#arg-input = "^2.0"
#file sys
#walkdir = "^2.3.0"
csv ="^1.1.6"
#tokio= = "*"
#logging, interct files, cache
libc = "0.2.94"
log = "*"
log4rs = "1.0.0"
env_logger= "*"
same-file= "*"
#cached= "*"
#retainer= "*"
#same_file = "^1.0"
[build-dependencies]
cc = "1.0" 
#pyo3 = "0.13.2"

